fixes more button on mobile

--- a/src/styles/ForecastSummary.css
+++ b/src/styles/ForecastSummary.css
@@ -57,5 +57,6 @@
     min-width:60px;
     height:30px;
     padding-bottom: 10px;
+    margin-right: 30px;
   }
 }
