--- a/src/styles/SearchForm.css
+++ b/src/styles/SearchForm.css
@@ -31,7 +31,6 @@
   font: inherit;
   cursor: pointer;
   color: inherit;
-  text-align: center;
   line-height: 1.5;
   font-size: 30px;
 }
@@ -50,6 +49,7 @@
   .search-form>button {
     height: 44px;
     text-align: left;
+    left: 0;
   }
 
   .search-form>input {
